# MentoringProgram

./: .gitignore  CMakeLists.txt  main.cpp
Sources/: CMakeLists.txt  FileValidator.cpp  FileValidator.h  Logger.cpp  Logger.h  NamedMutex.cpp  NamedMutex.h  SharedConditionVariable.cpp  SharedConditionVariable.h  SharedMemory.cpp  SharedMemory.h  SharedMutex.cpp  SharedMutex.h  SharedSemaphore.cpp  SharedSemaphore.h  Tool.cpp  Tool.h
cmake/modules/: FindCryptoPP.cmake
include/: Application.h  ChildProcess.h  Client.h  Cryptor.h  CustomException.h  DataProcessor.h  Logger.h  NamedMutex.h  ParentProcess.h  Processor.h  Server.h  Session.h  SharedMemory.h  Tool.h  Utils.h
include/client/: Client.h  ClientDataStruct.h  DataEncryptor.h  DataReader.h  Encoder.h  Reader.h  Sender.h
include/server/: DataDecryptor.h  DataWriter.h  Decoder.h  Receiver.h  ServerDataStruct.h  Writer.h
src/: Application.cpp  ChildProcess.cpp  Client.cpp  Cryptor.cpp  CustomException.cpp  Logger.cpp  NamedMutex.cpp  ParentProcess.cpp  Server.cpp  Session.cpp  SharedMemory.cpp  Tool.cpp  Utils.cpp  Utils.h  main.cpp
src/client/: Client.cpp  DataEncryptor.cpp  DataReader.cpp  Encoder.cpp  Reader.cpp  Sender.cpp  main.cpp
src/server/: DataDecryptor.cpp  DataWriter.cpp  Decoder.cpp  Receiver.cpp  Server.cpp  Session.cpp  Writer.cpp  main.cpp
